# src/openapi/openapi.json
@@ -11,6 +11,170 @@
         }
     ],
     "paths": {
+        "/woocommerce/product/{id}": {
+            "get": {
+                "tags": [
+                    "woo-product-rest-controller"
+                ],
+                "operationId": "getProduct",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "woo-product-rest-controller"
+                ],
+                "operationId": "updateProduct",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "woo-product-rest-controller"
+                ],
+                "operationId": "deleteProduct",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/woocommerce/orders/{id}": {
+            "get": {
+                "tags": [
+                    "woo-order-rest-controller"
+                ],
+                "operationId": "getOrderById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "woo-order-rest-controller"
+                ],
+                "operationId": "updateOrder",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "tags": [
@@ -229,7 +393,7 @@
                 "tags": [
                     "product-rest-controller"
                 ],
-                "operationId": "updateProduct",
+                "operationId": "updateProduct_1",
                 "parameters": [
                     {
                         "name": "id",
@@ -268,7 +432,7 @@
                 "tags": [
                     "product-rest-controller"
                 ],
-                "operationId": "deleteProduct",
+                "operationId": "deleteProduct_1",
                 "parameters": [
                     {
                         "name": "id",
@@ -292,7 +456,7 @@
                 "tags": [
                     "order-reset-controller"
                 ],
-                "operationId": "getOrderById",
+                "operationId": "getOrderById_1",
                 "parameters": [
                     {
                         "name": "id",
@@ -321,7 +485,7 @@
                 "tags": [
                     "order-reset-controller"
                 ],
-                "operationId": "updateOrder",
+                "operationId": "updateOrder_1",
                 "parameters": [
                     {
                         "name": "id",
@@ -417,11 +581,19 @@
                 "parameters": [
                     {
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true,
                         "schema": {
                             "type": "integer",
                             "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "Filename",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 ],
@@ -429,11 +601,19 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/InterFaceCarte"
+                                "required": [
+                                    "file"
+                                ],
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
                             }
                         }
-                    },
-                    "required": true
+                    }
                 },
                 "responses": {
                     "200": {
@@ -559,6 +739,36 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    }
+                }
+            }
+        },
+        "/woocommerce/product": {
+            "post": {
+                "tags": [
+                    "woo-product-rest-controller"
+                ],
+                "operationId": "createProduct",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -746,7 +956,7 @@
                 "tags": [
                     "product-rest-controller"
                 ],
-                "operationId": "createProduct",
+                "operationId": "createProduct_1",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -849,15 +1059,33 @@
                     "inter-face-carte-rest-controller"
                 ],
                 "operationId": "createInterFaceCarte",
+                "parameters": [
+                    {
+                        "name": "Filename",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/InterFaceCarte"
+                                "required": [
+                                    "file"
+                                ],
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
                             }
                         }
-                    },
-                    "required": true
+                    }
                 },
                 "responses": {
                     "200": {
@@ -866,6 +1094,54 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/InterFaceCarte"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/maps/upload": {
+            "post": {
+                "tags": [
+                    "inter-face-carte-rest-controller"
+                ],
+                "operationId": "uploadImage",
+                "parameters": [
+                    {
+                        "name": "Filename",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "file"
+                                ],
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
                                 }
                             }
                         }
@@ -954,7 +1230,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/auth/": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -977,6 +1253,46 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/AuthenticationResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/woocommerce/products": {
+            "get": {
+                "tags": [
+                    "woo-product-rest-controller"
+                ],
+                "operationId": "getAllProduct",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/woocommerce/orders": {
+            "get": {
+                "tags": [
+                    "woo-order-rest-controller"
+                ],
+                "operationId": "getALlOrders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
                                 }
                             }
                         }
